--- a/content/cloud-docs/workspaces/variables/managing-variables.mdx
+++ b/content/cloud-docs/workspaces/variables/managing-variables.mdx
@@ -48,7 +48,7 @@ The **Variables** page appears, showing all workspace-specific variables and var
 
 ### Add a Variable
 
-Terraform automatically detects [Terraform variables](/cloud-docs/workspaces/variables#terraform-variables) without default values in your configuration when you [create a new workspace](/cloud-docs/workspaces/creating) using the VCS workflow. To add additional Terraform or environment variables:
+To add a variable:
 
 1. Go to the workspace **Variables** page and click **+ Add variable** in the **Workspace Variables** section.
 
@@ -62,7 +62,7 @@ Terraform automatically detects [Terraform variables](/cloud-docs/workspaces/var
 
 ### Edit a Variable
 
-Terraform automatically detects [Terraform variables](/cloud-docs/workspaces/variables#terraform-variables) without default values in your configuration when you [create a new workspace](cloud-docs/workspaces/creating) using the VCS workflow. Terraform cannot complete runs until you enter values for those variables. To edit a variable:
+To edit a variable:
 
 1. Click the ellipses next to the variable you want to edit and select **Edit**.
 1. Make any desired changes and click **Save variable**.
