--- a/content/cloud-docs/users-teams-organizations/api-tokens.mdx
+++ b/content/cloud-docs/users-teams-organizations/api-tokens.mdx
@@ -35,7 +35,7 @@ If an API token is generated for the "owners" team, then that API token will hav
 
 ## Organization API Tokens
 
-API tokens may generated for a specific organization. Organization API tokens allow access to the organization-level settings and resources, without being tied to any specific team or user.
+API tokens may be generated for a specific organization. Organization API tokens allow access to the organization-level settings and resources, without being tied to any specific team or user.
 
 To manage the API token for an organization, go to **Organization settings > API Token** and use the controls under the "Organization Tokens" header.
 
