--- a/content/cloud-docs/run/states.mdx
+++ b/content/cloud-docs/run/states.mdx
@@ -54,7 +54,7 @@ is entered for all runs, including [speculative](/cloud-docs/run/#speculative-pl
 this phase, Terraform Cloud sends information about the run to the configured external system and
 waits for a `passed` or `failed` response to determine whether the run can continue.
 
--> **Note:** The information sent to the configured external system includes the [JSON output](/internals/json-format) of your plan.
+-> **Note:** The information sent to the configured external system includes the [JSON output](/internals/json-format) of the Terraform plan.
 
 _States in this stage:_
 
