--- a/content/cloud-docs/run/states.mdx
+++ b/content/cloud-docs/run/states.mdx
@@ -59,7 +59,7 @@ waits for a `passed` or `failed` response to determine whether the run can conti
 _States in this stage:_
 
 - **Running tasks:** Terraform Cloud is currently waiting for a response from the configured external system(s).
-  - External systems must respond initially with a `200 OK` acknowledging the request is in progress. After that, they have 10 minutes to return a status of `passed` or `failed`, or the timeout will expire and the task will be assumed to be in the `failed` status.
+  - External systems must respond initially with a `200 OK` acknowledging the request is in progress. After that, they have 10 minutes to return a status of `passed`, `running`, or `failed`, or the timeout will expire and the task will be assumed to be in the `failed` status.
 
 _Leaving this stage:_
 
