--- a/content/cloud-docs/run/states.mdx
+++ b/content/cloud-docs/run/states.mdx
@@ -63,7 +63,7 @@ _Leaving this stage:_
 - If any mandatory tasks failed, the run skips to completion (**Plan Errored** state).
 - If any advisory tasks failed, the run proceeds to the **Applying** state, with a visible warning regarding the failed task.
 - If a combination of mandatory and advisory tasks are configured for a single run, Terraform will take the most restrictive action. This means that if there are two advisory tasks that succeed and one mandatory task that failed, the run will fail. If one mandatory task succeeds and two advisory tasks fail, the run will succeed with a warning.
-- If a user canceled the run by pressing the "Cancel Run" button, the run ends in the **Canceled** state.
+- If a user canceled the run, the run ends in the **Canceled** state.
 
 ## 4. The Cost Estimation Stage
 
