--- a/content/enterprise/releases/2022/v202204-2.mdx
+++ b/content/enterprise/releases/2022/v202204-2.mdx
@@ -4,6 +4,10 @@ page_title: Releases - Terraform Enterprise
 
 # TFE Release v202204-2 (610 Required)
 
+## Known Issues
+
+1. [May 3, 2022] `tfe-admin health-check` fails with `sh: /root/ptfe-health-check: not found` after a change to the `ptfe_health_check` container Entrypoint to run the process as an unprivileged user under `/run/ptfe-health-check` but the `alias` was still referencing `/root/ptfe-health-check`. This issue will be fixed in `v202205-1`.
+
 ## CHANGES SINCE v202204-1
 
 The `tfe-bootstrap` container now automatically negotiates the Docker API version before making requests to the Docker API to prevent `Error response from daemon: client version 1.41 is too new. Maximum supported API version is 1.40` errors upon Terraform Enterprise installation or upgrade.
