--- a/content/cloud-docs/workspaces/settings/run-tasks.mdx
+++ b/content/cloud-docs/workspaces/settings/run-tasks.mdx
@@ -18,7 +18,7 @@ You can manage run tasks through the UI as detailed below or through the [Run Ta
 
 ## Creating a Run Task
 
-Refer to [Run Tasks Integration](/cloud-docs/integrations/run-tasks#prerequisites) to learn more about available run tasks. These include the HCP Packer integration and run tasks developed by HashiCorp Technology Partners. 
+Refer to [Run Tasks Integration](/cloud-docs/integrations/run-tasks#prerequisites) for a list of available run tasks. These include the HCP Packer integration and run tasks developed by HashiCorp Technology Partners. 
 
 To create a new run task:
 
