--- a/content/enterprise/releases/2022/v202204-2.mdx
+++ b/content/enterprise/releases/2022/v202204-2.mdx
@@ -4,6 +4,10 @@ page_title: Releases - Terraform Enterprise
 
 # TFE Release v202204-2 (610 Required)
 
+## Known Issues
+
+1. [May 10, 2022] This release includes an issue with Audit Log tagging, causing audit logs to no longer be tagged with the [Audit Log] prefix. This issue will be fixed in 'v202205-2'.
+
 ## CHANGES SINCE v202204-1
 
 The `tfe-bootstrap` container now automatically negotiates the Docker API version before making requests to the Docker API to prevent `Error response from daemon: client version 1.41 is too new. Maximum supported API version is 1.40` errors upon Terraform Enterprise installation or upgrade.
